--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,7 @@
 ## Setup filters for GNU Bash scripts
 ## Refer .gitconfig for more information
 *.bash filter=bash
+
+## Setup filters for Verilog HDL design code
+*.v filter=verilog
+*.verilog filter=verilog
