--- a/.travis.yml
+++ b/.travis.yml
@@ -3,35 +3,33 @@
 # This file is based on
 # TravisCI · koalaman/shellcheck Wiki
 # https://github.com/koalaman/shellcheck/wiki/TravisCI
+
+language: bash
+
 ## Use container-based infrastructure for quicker build start-up
 sudo: false
+
+## We only support Ubuntu 14.04 and newer
+dist: trusty
+
+matrix:
+  fast_finish: true
+
+git:
+  depth: 1
+  submodules: false
 
 addons:
   apt:
     sources:
     packages:
-    - realpath      # Merged to GNU Coreutils in Ubuntu 16.04
+      - realpath      # Merged to GNU Coreutils in Ubuntu 16.04
 
-## We only support Ubuntu 14.04 and newer
-dist: trusty
+before_install: true
 
-language: bash
-
-## EXPERIMENTAL
-## Customizing the Build - Travis CI
-## https://docs.travis-ci.com/user/customizing-the-build/#Git-Clone-Depth
-## > Please note that if you use a depth of 1 and have a queue of jobs, Travis CI won’t build commits that are in the queue when you push a new commit.
-git:
-  depth: 1
-
-install:
-
-before_script:
+before_script: true
 
 script:
-#- git ls-files -z \*.bash | xargs --max-args=1 --verbose --null -- shellcheck
-# The following command will be dropped in favor with the above one after Travis CI environment contains ShellCheck >=0.4.5, which fixes the bug that triggers SC2148 even when `shell` directive is used
-- git ls-files -z \*.bash | xargs --max-args=1 --verbose --null -- shellcheck --shell=bash
-
-matrix:
-  fast_finish: true
+  #- git ls-files -z \*.bash | xargs --max-args=1 --verbose --null -- shellcheck
+  # The following command will be dropped in favor with the above one after Travis CI environment contains ShellCheck >=0.4.5, which fixes the bug that triggers SC2148 even when `shell` directive is used
+  - git ls-files -z \*.bash | xargs --max-args=1 --verbose --null -- shellcheck --shell=bash
