ci: Use latest release of ShellCheck
Signed-off-by: 林博仁(Buo-ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	url = https://github.com/Lin-Buo-Ren/GNU-Bash-Automatic-Checking-Program-for-Git-Projects.git
 	fetchRecurseSubmodules = no
 	ignore = all
+[submodule "Continuous Integration/Utilities for Travis CI"]
+	path = Continuous Integration/Utilities for Travis CI
+	url = https://github.com/Lin-Buo-Ren/Utilities-for-Travis-CI.git
+	fetchRecurseSubmodules = no
+	ignore = all
