ci: Fix configuration syntax
Signed-off-by: 林博仁(Buo-ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,7 @@ addons:
       - realpath      # Merged to GNU Coreutils in Ubuntu 16.04
 
 before_install:
-  - git submodule init \
-      'Linters/GNU Bash Automatic Checking Program for Git Projects' \
-      'Continuous Integration/Utilities for Travis CI'
+  - git submodule init 'Linters/GNU Bash Automatic Checking Program for Git Projects' 'Continuous Integration/Utilities for Travis CI'
   - git submodule update --depth=1
 
 install:
