Fix filter git-config
Signed-off-by: 林博仁(Buo-ren Lin) <Buo.Ren.Lin@gmail.com>

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,4 +4,4 @@
 	clean = "\"Git Clean and Smudge Filters/Clean Filter for GNU Bash Script/Clean Filter for GNU Bash Script.bash\""
 
 [filter "verilog"]
-	clean = "clean-verilog.iStyle.bash"
+	clean = "./filter.bash --cleaner istyle"
